@@ -350,12 +350,16 @@ try:
                                 if attack_vector == "harvester" or attack_vector == "tabnabbing" or attack_vector == "webjacking":
                                     print_info("This option is used for what IP the server will POST to.")
                                     print_info("If you're using an external IP, use your external IP for this")
-                                    rhost = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
-                                    rhost.connect(('google.com', 0))
-                                    rhost.settimeout(2)
-                                    revipaddr = rhost.getsockname()[0]
-                                    ipaddr = raw_input(setprompt(["2"], "IP address for the POST back in Harvester/Tabnabbing [" + revipaddr + "]"))
-                                    if ipaddr == "": ipaddr=revipaddr
+                                    try:
+                                        rhost = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
+                                        rhost.connect(('google.com', 0))
+                                        rhost.settimeout(2)
+                                        revipaddr = rhost.getsockname()[0]
+                                        ipaddr = raw_input(setprompt(["2"], "IP address for the POST back in Harvester/Tabnabbing [" + revipaddr + "]"))
+                                        if ipaddr == "": ipaddr=revipaddr
+                                    except Exception:
+                                        rhost = raw_input("Enter the IP address for POST back in Harvester/Tabnabbing: ")
+                                        ipaddr = rhost
 
                                 if check_options("IPADDR=") != 0:
                                     ipaddr = check_options("IPADDR=")
